@@ -257,9 +257,7 @@ tr > .cr-table-cell {
   -webkit-animation: spin 1s infinite steps(8);
   animation: spin 1s infinite steps(8);
 }
-#execute-btn {
-  position: relative;
-}
+
 .cr-loading-indicator{
   position: absolute;
   left: 50%;
