@@ -33,8 +33,8 @@
             </div>
           </div>
 
-          <div>
-            <cli mime-type="text/x-cratedb" theme="monokai"></cli>
+          <div id="cr-console-query">
+            <cli id="console-editor" mime-type="text/x-cratedb" theme="monokai"></cli>
           </div>
 
           <div class="cr-console-header">
